MyFirstForceProject/src/objects/JCPenny_Formals__c.object
<CustomObject>
    <description>JCP apparels : formals</description>
    <fields>
        <fullName>Discount_Coupon__c</fullName>
        <defaultValue>&quot;Not applicable&quot;</defaultValue>
        <description>Discount coupon information</description>
        <label>Discount_Coupon</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Price__c</fullName>
        <formula>Name__r.Formals_price__c  - (  Name__r.Formals_price__c *  JCP_Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JCP_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>discount price in dollars</description>
        <label>JCP_Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JCP_units__c</fullName>
        <defaultValue>0</defaultValue>
        <description>number of units available in JCP inventory</description>
        <label>JCP_units</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>mapped with Levi&apos;s formals Product ID column</description>
        <label>Product ID</label>
        <referenceTo>Levi_s_Formals__c</referenceTo>
        <relationshipLabel>JCPenny_Formals</relationshipLabel>
        <relationshipName>JCPenny_Formals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Formals of JCP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Record_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JCPenny Formals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>